--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <title>MB - Website</title>
+    <style>
+      html{background-color: #1D1D1D;color:white;}
+    </style>
   </head>
   <body>
     <div id="app"></div>
